--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ buildscript {
 plugins {
     id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
     id 'io.codearte.nexus-staging' version '0.30.0'
+    id 'maven-publish'
 }
 
 apply plugin: "io.gitlab.arturbosch.detekt"
